--- a/src/css/navBar.css
+++ b/src/css/navBar.css
@@ -38,7 +38,7 @@ a:hover {
 .custom-navbar-toggler {
   border: none;
   background: transparent;
-  color:white;
+  color: white;
   outline: none;
 }
 
@@ -48,14 +48,17 @@ a:hover {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(45deg);
   }
 }
+
 @keyframes fadeIn {
   0% {
     opacity: 0;
   }
+
   100% {
     opacity: 1;
   }
@@ -65,14 +68,17 @@ a:hover {
   0% {
     opacity: 1;
   }
+
   100% {
     opacity: 0;
   }
 }
+
 @keyframes slideIn {
   0% {
     transform: translate(0, 0);
   }
+
   100% {
     transform: translate(-5px, -6px);
   }
@@ -98,6 +104,7 @@ a:hover {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(-45deg);
   }
@@ -107,13 +114,14 @@ a:hover {
   0% {
     transform: translate(0, 0);
   }
+
   100% {
     transform: translate(-5px, 6px);
   }
 }
 
 
-#line2.line-open{
+#line2.line-open {
   animation: fadeOut 0.4s forwards;
 }
 
@@ -127,7 +135,8 @@ a:hover {
   justify-content: space-between;
   align-items: center;
   margin: auto;
-  max-width: 100%; /* Add this line */
+  max-width: 100%;
+  /* Add this line */
 
 }
 
@@ -139,52 +148,72 @@ a:hover {
   justify-content: center;
   top: 0;
   /* Position at the top */
-  animation: slideIn 0.5s cubic-bezier(.24,.51,.8,.94) both;
+  animation: slideIn 0.5s cubic-bezier(.24, .51, .8, .94) both;
   z-index: 1000;
   max-width: 100%;
   /* Ensure the navbar is above other elements */
   border-radius: 8vw;
 }
-@media not (max-width: 820px){
-  #line1, #line2, #line3 {
+
+@media not (max-width: 820px) {
+
+  #line1,
+  #line2,
+  #line3 {
     animation: none;
-  
+
     width: 3.6vh;
     height: 0.4vh;
-    background-color: #fff; /* Change to your desired color */
+    background-color: #fff;
+    /* Change to your desired color */
     margin: 1.0vh 0vh;
   }
+
   .nav-horizontal {
-    flex-direction:row ;
+    flex-direction: row;
   }
-  .custom-navbar{
-    max-width: fit-content; /* Reduce the max-width */
-    transition: max-width 0.5s cubic-bezier(0.165, 0.84, 0.44, 1); /* Add this line */
+
+  .custom-navbar {
+    max-width: -moz-fit-content;
+
+    max-width: fit-content;
+    /* Reduce the max-width */
+    transition: max-width 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
+    /* Add this line */
   }
+
   .navBrand {
     max-width: 100%;
     max-height: 100%;
   }
 }
+
 @media (max-width: 820px) {
   .navBrand {
-    font-size: 0.1em; /* Reduce the font size */
+    font-size: 0.1em;
+    /* Reduce the font size */
     max-width: 67%;
   }
-  
-  .custom-navbar{
-    max-width: 78%; /* Reduce the max-width */
-  
+
+  .custom-navbar {
+    max-width: 78%;
+    /* Reduce the max-width */
+
   }
-  #line1, #line2, #line3 {
+
+  #line1,
+  #line2,
+  #line3 {
     animation: none;
-  
+
     width: 3.6vh;
     height: 0.4vh;
-    background-color: #fff; /* Change to your desired color */
+    background-color: #fff;
+    /* Change to your desired color */
     margin: 1.1vh 0vh;
   }
 }
+
 .navBrand {
   background: linear-gradient(to right, lightgreen, lightblue);
   -webkit-background-clip: text;
@@ -226,7 +255,7 @@ a:active {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: rgba(202, 202, 14, 1);
   text-shadow: 5px 5px 5px rgba(1, 1, 1, 0.2);
-  font-size:x-large;
+  font-size: x-large;
 }
 
 
